--- a/article2.html
+++ b/article2.html
@@ -98,7 +98,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="Home.html">Home</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
 
                             <a class="dropdown-item" href="Institute.html">Institute</a>
                             <a class="dropdown-item" href="Owner.html">Owner & CEo</a>
@@ -349,7 +349,7 @@
                                                             class="fab fa-linkedin"></i></a>
                                                 </div>
                                                 <div class="tags">
-                                                    <a href="Home.html">Kreative Kudi</a>
+                                                    <a href="index.html">Kreative Kudi</a>
                                                 </div>
                                             </div>
                                         </div>
