--- a/article3.html
+++ b/article3.html
@@ -98,7 +98,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="Home.html">Home</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
 
                             <a class="dropdown-item" href="Institute.html">Institute</a>
 
@@ -361,7 +361,7 @@
                                                             class="fab fa-linkedin"></i></a>
                                                 </div>
                                                 <div class="tags">
-                                                    <a href="Home.html">Kreative Kudi</a>
+                                                    <a href="index.html">Kreative Kudi</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -371,7 +371,7 @@
                                             <span><a href="article2.html">Prev Post</a></span>
                                             <span class="icon"><a href="articles.html"><i
                                                         class="fas fa-th-large"></i></a></span>
-                                            <span class="text-right"><a href="Home.html">END POST</a></span>
+                                            <span class="text-right"><a href="index.html">END POST</a></span>
                                         </div>
                                     </div>
                                 </div>
