--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="Home.html">Home</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
 
                             <a class="dropdown-item" href="Institute.html">Institute</a>
 
