--- a/article1.html
+++ b/article1.html
@@ -98,7 +98,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="Home.html">Home</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
 
                             <a class="dropdown-item" href="Institute.html">Institute</a>
 
@@ -281,7 +281,7 @@
                                                             class="fab fa-linkedin"></i></a>
                                                 </div>
                                                 <div class="tags">
-                                                    <a href="Home.html">Kreative Kudi</a>
+                                                    <a href="index.html">Kreative Kudi</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -291,7 +291,7 @@
                             </div>
 
                             <div class="pagination">
-                                <span><a href="Home.html">HOME PAGE</a></span>
+                                <span><a href="index.html">HOME PAGE</a></span>
                                 <span class="icon"><a href="articles.html"><i class="fas fa-th-large"></i></a></span>
                                 <span class="text-right"><a href="article2.html">Next Post</a></span>
                             </div>
