--- a/articles.html
+++ b/articles.html
@@ -258,7 +258,7 @@
                             
                             <div class="pagination">
                                 <span class="active">
-                                <a href="Home.html">H</a></span>
+                                <a href="index.html">H</a></span>
                                 <span><a href="contact.html">C</a></span>
                                 
                             </div>
