--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Vie onepage themeforest" />
-    <meta name="description" content="Vie - Onepage Multi-Purpose HTML5 Template" />
-    <meta name="author" content="" />
+    <meta name="keywords" content="Digital marketing,Graphic design,Logo design,website design,Social media marketing,Video editing" />
+    <meta name="description" content="Digital Marketing Company & Institute" />
+    <meta name="author" content="Kreative_Kudi" />
+
 
     <!-- Title  -->
     <title>Kreative_kudi</title>
