--- a/Institute.html
+++ b/Institute.html
@@ -82,7 +82,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="logo" href="profile img/v.jpg">
+            <a class="logo" href="index.html">
                 <img src="personal logo/face c.png" alt="logo">
             </a>
 
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="img">
-                        <img src="personal logo/2.webp" alt="">
+                        <img src="personal logo/q1.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7 valign">
