--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="logo" href="profile img/v.jpg">
+            <a class="logo" href="index.html">
                 <img src="personal logo/face c.png" alt="logo">
             </a>
 
@@ -436,7 +436,7 @@
                             <div class="vid-area">
                                 <span class="text">Watch Video</span>
                                 <div class="vid-icon">
-                                    <a class="vid" href="https://vimeo.com/127203262">
+                                    <a class="vid" href="https://www.youtube.com/watch?v=2M9KowQH1rw">
                                         <div class="vid-butn">
                                             <span class="icon">
                                                 <i class="fas fa-play"></i>
