--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="logo" href="profile img/v.jpg">
+            <a class="logo" href="index.html">
                 <img src="personal logo/face c.png" alt="logo">
             </a>
 
@@ -115,7 +115,7 @@
 
 
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.ht">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
