--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="logo" href="profile img/v.jpg">
+            <a class="logo" href="index.html">
                 <img src="personal logo/face c.png" alt="logo">
             </a>
 
