--- a/Owner.html
+++ b/Owner.html
@@ -145,7 +145,7 @@
                             stunning visuals.
                             As someone who has worked in marketing and graphic design for over a Quadrennial, I know
                             what brands need to capture
-                            their audiences' attention.
+                            their audience attention.
                         </h1>
                     </div>
                 </div>
@@ -350,7 +350,7 @@
                         <div class="item-img">
                             <div class="cont">
                                 <h6>Creative Ads Design</h6>
-                                <p>The hospitality industry</p>
+                                <p>Food industry</p>
                             </div>
                             <a href="works2.html" class="rota">
                                 <img src="portfolio work/p3.jpg" alt="image">
@@ -380,7 +380,7 @@
                         <div class="item-img">
                             <div class="cont">
                                 <h6>Creative Ads designs</h6>
-                                <p>The hospitality industry</p>
+                                <p>Food industry</p>
                             </div>
                             <a href="works2.html" class="rota">
                                 <img src="portfolio work/p5.jpg" alt="image">
@@ -395,7 +395,7 @@
                         <div class="item-img">
                             <div class="cont">
                                 <h6>Creative post designs</h6>
-                                <p>The hospitality industry</p>
+                                <p>Restro industry</p>
                             </div>
                             <a href="works2.html" class="rota">
                                 <img src="portfolio work/p6.jpg" alt="image">
@@ -409,7 +409,7 @@
                         <div class="item-img">
                             <div class="cont">
                                 <h6>Creative post designs</h6>
-                                <p>The hospitality industry</p>
+                                <p>Food industry</p>
                             </div>
                             <a href="works2.html" class="rota">
                                 <img src="portfolio work/p7.jpg" alt="image">
@@ -423,7 +423,7 @@
                         <div class="item-img">
                             <div class="cont">
                                 <h6>Creative post designs</h6>
-                                <p>The hospitality industry</p>
+                                <p>Restro industry</p>
                             </div>
                             <a href="works2.html" class="rota">
                                 <img src="portfolio work/p8.jpg" alt="image">
