--- a/index.html
+++ b/index.html
@@ -677,9 +677,8 @@
                             </span>
                             <h5>Basic ~ 1 month</h5>
                             <h5>In just 5000/-</h5>
-                            <p>5 Post/Week</p>
-                            <P>5 Stories/Week</P>
-                            <P>1 Video</P>
+                            <p>3 Post/Week</p>
+                            <P>3 Stories/Week</P>
                             <P>1 GIF</P>
                             <P>Post of every Festival & Days</P>
                             <a href="contact.html" class="more-stroke"><span></span></a>
@@ -691,9 +690,9 @@
                                 <i class="ion-ios-bolt-outline"></i>
                             </span>
                             <h5>Standerd ~ 3 month</h5>
-                            <h5>In just 13000/-</h5>
-                            <p>5 Post/Week</p>
-                            <P>5 Stories/Week</P>
+                            <h5>In just 18000/-</h5>
+                            <p>3 Post/Week</p>
+                            <P>3 Stories/Week</P>
                             <P>1 Video/month</P>
                             <P>1 GIF/month</P>
                             <P>Post of every Festival & Days</P>
@@ -706,7 +705,7 @@
                                 <i class="ion-cube"></i>
                             </span>
                             <h5>Premium ~ 6 month</h5>
-                            <h5>In just 26000/-</h5>
+                            <h5>In just 38000/-</h5>
                             <P>6 Paid Promotions</P>
                             <p>5 Post/Week</p>
                             <P>5 Stories/Week</P>
@@ -722,8 +721,9 @@
                                 <i class="ion-ios-color-wand"></i>
                             </span>
                             <h5>Gold ~ 12 month</h5>
-                            <h5>In just 52000/-</h5>
+                            <h5>In just 80000/-</h5>
                             <P>12 Paid Promotions</P>
+                            <p>1 logo design</p>
                             <p>5 Post/Week</p>
                             <P>5 Stories/Week</P>
                             <P>1 Video/month</P>
