--- a/Owner.html
+++ b/Owner.html
@@ -605,7 +605,7 @@
                         <h6 class="back-color">Get The Latest News</h6>
                         <h3>What are the Trending News.</h3>
                         <p>We provide a kick start to the business in the digital world..</p>
-                        <a href="blog.html">
+                        <a href="articles.html">
                             <span>More Blog Posts</span>
                         </a>
                     </div>
