--- a/Institute.html
+++ b/Institute.html
@@ -600,7 +600,7 @@
                                                     <a href="#0">WHAT IS "DIGITAL MARKETING" & its Components.</a>
                                                 </h6>
                                                 <div class="btn-more">
-                                                    <a href="blog-details.html" class="simple-btn">Read More</a>
+                                                    <a href="article1.html" class="simple-btn">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -624,7 +624,7 @@
                                                         India in 2023.</a>
                                                 </h6>
                                                 <div class="btn-more">
-                                                    <a href="blog2details.html" class="simple-btn">Read More</a>
+                                                    <a href="article2.html" class="simple-btn">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -648,7 +648,7 @@
                                                         India.</a>
                                                 </h6>
                                                 <div class="btn-more">
-                                                    <a href="blog3details.html" class="simple-btn">Read More</a>
+                                                    <a href="article3.html" class="simple-btn">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
