--- a/Owner.html
+++ b/Owner.html
@@ -627,7 +627,7 @@
                                     </a>
                                 </div>
                                 <h5>
-                                    <a href="blog-details.html">What is "DIGITAL MARKETING" & componant .</a>
+                                    <a href="article1.html">What is "DIGITAL MARKETING" & componant .</a>
                                 </h5>
                             </div>
                         </div>
@@ -648,7 +648,7 @@
                                     </a>
                                 </div>
                                 <h5>
-                                    <a href="blog2details.html">Digital Marketing Growth in
+                                    <a href="article2.html">Digital Marketing Growth in
                                         India in Future .</a>
                                 </h5>
                             </div>
