--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                                         <a href="#0">WHAT IS "DIGITAL MARKETING".</a>
                                     </h5>
                                     <div class="btn-more">
-                                        <a href="blog-details.html" class="simple-btn">Read More</a>
+                                        <a href="article1.html" class="simple-btn">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -800,7 +800,7 @@
                                             India in 2023.</a>
                                     </h5>
                                     <div class="btn-more">
-                                        <a href="blog2details.html" class="simple-btn">Read More</a>
+                                        <a href="article2.html" class="simple-btn">Read More</a>
                                     </div>
                                 </div>
                             </div>
