--- a/Owner.html
+++ b/Owner.html
@@ -322,7 +322,7 @@
                                 <h6>Creative Graphic Design</h6>
                                 <p>Food delivery industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p1.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -337,7 +337,7 @@
                                 <h6>Creative Logo Design</h6>
                                 <p>Bakery industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a  class="rota">
                                 <img src="portfolio work/p2.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -352,7 +352,7 @@
                                 <h6>Creative Ads Design</h6>
                                 <p>Food industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p3.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -367,7 +367,7 @@
                                 <h6>Creative Post Design</h6>
                                 <p>Tourism industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p4.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -382,7 +382,7 @@
                                 <h6>Creative Ads designs</h6>
                                 <p>Food industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a  class="rota">
                                 <img src="portfolio work/p5.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -397,7 +397,7 @@
                                 <h6>Creative post designs</h6>
                                 <p>Restro industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a  class="rota">
                                 <img src="portfolio work/p6.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -411,7 +411,7 @@
                                 <h6>Creative post designs</h6>
                                 <p>Food industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p7.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -425,7 +425,7 @@
                                 <h6>Creative post designs</h6>
                                 <p>Restro industry</p>
                             </div>
-                            <a href="works2.html" class="rota">
+                            <a  class="rota">
                                 <img src="portfolio work/p8.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
