--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="Digital marketing,Graphic design,Logo design,website design,Social media marketing,Video editing" />
+    <meta name="keywords"
+        content="Digital marketing,Graphic design,Logo design,website design,Social media marketing,Video editing" />
     <meta name="description" content="Digital Marketing Company & Institute" />
     <meta name="author" content="Kreative_Kudi" />
 
@@ -214,7 +215,8 @@
                         </div>
                         <div class="cont">
                             <h6>Graphic Design</h6>
-                            <p>Tempore corrupti temporibus fuga earum asperiores fugit laudantium.</p>
+                            <p>“the art and practice of planning and projecting ideas and experiences with visual and
+                                textual content.”</p>
                         </div>
                     </div>
                 </div>
@@ -224,8 +226,8 @@
                             <span class="icon pe-7s-phone"></span>
                         </div>
                         <div class="cont">
-                            <h6>Web & Mobile Design</h6>
-                            <p>Tempore corrupti temporibus fuga earum asperiores fugit.</p>
+                            <h6>Web & UI/UX Design</h6>
+                            <p>create the user interface for an app, website, or other interactive media.</p>
                         </div>
                     </div>
                 </div>
@@ -236,7 +238,8 @@
                         </div>
                         <div class="cont">
                             <h6>Social media Marketing</h6>
-                            <p>Tempore corrupti temporibus fuga earum asperiores fugit.</p>
+                            <p>Social media allows marketers to connect and engage potential customers where they are.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -246,8 +249,9 @@
                             <span class="icon pe-7s-diskette"></span>
                         </div>
                         <div class="cont">
-                            <h6>Document Legal Policy</h6>
-                            <p>Tempore corrupti temporibus fuga earum asperiores fugit laudantium.</p>
+                            <h6>Logo Design</h6>
+                            <p>With logo design, you have a visual communication tool to help you get your message
+                                across to the audience.</p>
                         </div>
                     </div>
                 </div>
@@ -479,7 +483,7 @@
                     <div class="content pt-0">
                         <h4 class="wow color-font">About us.</h4>
                         <p class="wow txt" data-splitting>We’re ,Kreative_Kudi an Award-Winning Digital Marketing
-                            Company based in Ahmedabad. LD brand promise is simple to
+                            Company based in Ahmedabad. To
                             provide powerful digital marketing solutions to small and medium businesses that are looking
                             to build success online.</p>
                         <ul class="feat">
