--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </div>
                     <div class="col-lg-7 img">
                         <img src="personal logo/Untitled-1.png" alt="">
-                        
+
                     </div>
                 </div>
             </div>
@@ -906,7 +906,8 @@
 
                             </div>
                             <div class="copy-right">
-                                <p>© <a href="https://www.linkedin.com/company/kreative-kudi-digital-marketing-agency/">Kreative Kudi </a></p>
+                                <p>© <a href="https://www.linkedin.com/company/kreative-kudi-digital-marketing-agency/">Kreative
+                                        Kudi </a></p>
                                 <p>All rights reserved 2020</p>
                             </div>
                         </div>
