--- a/Owner.html
+++ b/Owner.html
@@ -337,7 +337,7 @@
                                 <h6>Creative Logo Design</h6>
                                 <p>Bakery industry</p>
                             </div>
-                            <a  class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p2.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -382,7 +382,7 @@
                                 <h6>Creative Ads designs</h6>
                                 <p>Food industry</p>
                             </div>
-                            <a  class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p5.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -397,7 +397,7 @@
                                 <h6>Creative post designs</h6>
                                 <p>Restro industry</p>
                             </div>
-                            <a  class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p6.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -425,7 +425,7 @@
                                 <h6>Creative post designs</h6>
                                 <p>Restro industry</p>
                             </div>
-                            <a  class="rota">
+                            <a class="rota">
                                 <img src="portfolio work/p8.jpg" alt="image">
                                 <div class="item-img-overlay"></div>
                             </a>
@@ -679,9 +679,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="form wow fadeInUp" data-wow-delay=".5s">
-                        <form
-                            action="https://formsubmit.co/kreativekudi@gmail.com" name="contact form" method="POST">
-                            
+                        <form action="https://formsubmit.co/kreativekudi@gmail.com" name="contact form" method="POST">
+
                             <div class="controls">
 
                                 <div class="row">
@@ -691,8 +690,9 @@
                                                 required="required">
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">  
-                                        <input type="email" name="email" placeholder="Email Address" required="required">
+                                    <div class="col-lg-4">
+                                        <input type="email" name="email" placeholder="Email Address"
+                                            required="required">
                                     </div>
                                     <div class="col-lg-4">
                                         <div class="form-group">
@@ -707,12 +707,12 @@
                                         </div>
                                     </div>
                                     <input type="hidden" name="_template" value="table">
-                                    
+
                                     <div class="col-12">
                                         <button type="submit" class="butn bord"><span>Send Message</span></button>
                                     </div>
                                     <input type="hidden" name="_autoresponse"
-                                        value="Thank you for getting in touch!  We appreciate you contacting 'KREATIVE KUDI'. One of our colleagues will get back in touch with you soon!Have a great day!">
+                                        value="Hi! Thanks for connecting 'Kreative Kudi Digital Marketing Company'.We’ll get back to you shortly.Have a great day!Thank you!">
                                 </div>
                             </div>
                         </form>
