--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <input type="email" name="email" placeholder="Email Address" required="required">
+                                        <input type="email" name="email" placeholder="Email Address"
+                                            required="required">
                                     </div>
 
                                     <div class="form-group">
@@ -193,7 +194,7 @@
                                     <input type="hidden" name="_template" value="table">
                                     <button type="submit" class="butn bord"><span>Send Message</span></button>
                                     <input type="hidden" name="_autoresponse"
-                                        value="Thank you for getting in touch!  We appreciate you contacting 'KREATIVE KUDI'. One of our colleagues will get back in touch with you soon!Have a great day!">
+                                        value="Hi! Thanks for connecting 'Kreative Kudi Digital Marketing Company'.We’ll get back to you shortly.Have a great day!Thank you!">
                                 </div>
                             </form>
                         </div>
