--- a/about.html
+++ b/about.html
@@ -670,7 +670,7 @@
                         <div class="title">
                             <h5>Quick Links</h5>
                             <p><a
-                                    href="https://www.linkedin.com/company/kreative-kudi-digital-marketing-agency/jobs/">Carrer</a>
+                                    href="https://www.linkedin.com/company/kreative-kudi-digital-marketing-agency/jobs/">Career</a>
                             </p>
                             <p><a href="personal logo/PRIVACY POLICY of kreative kudi[1].pdf">Privacy Policy</a></p>
                             <p><a href="https://www.instagram.com/kreativekudi_digitalmarketing/">Instagram</a></p>
