--- a/article2.html
+++ b/article2.html
@@ -369,6 +369,20 @@
                 </div>
             </div>
         </section>
+        <a href="https://wa.me/918160581704?text=Hi%20There!" class="float" style="
+                                                  position: fixed;
+                                                  width: 30px;
+                                                  height: 30px;
+                                                  bottom: 30px;
+                                                  left: 30px;
+                                                  color: #fff;
+                                                  border-radius: 50px;
+                                                  text-align: center;
+                                                  cursor: pointer;
+                                                  box-shadow: 2px 2px 3px #999;
+                                                ">
+            <img src="https://trickuweb.com/whatsapp.png" alt="" height="30px" width="30px" />
+        </a>
 
         <!-- ==================== End Blog ==================== -->
 
