--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <meta name="description" content="Digital Marketing Company & Institute" />
     <meta name="author" content="Kreative_Kudi" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-07TVKQ6ZQL');
+    </script>
+
     <!-- Title  -->
     <title>Kreative_Kudi</title>
 
